--- a/wipro/test-output/index.html
+++ b/wipro/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\user11\AppData\Local\Temp\testng-eclipse-323562167\testng-customsuite.xml</span>
+                    <span>C:\Users\user11\AppData\Local\Temp\testng-eclipse-531389964\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,17 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="pack1.Lab15_1" class="method navigator-link" hash-for-method="f(Admin, admin123)">f(Admin, admin123)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="pack1.Lab16" class="method navigator-link" hash-for-method="f(Admin, admin123)">f(Admin, admin123)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="pack1.Lab15_1" class="method navigator-link" hash-for-method="f(geeta, apple)">f(geeta, apple)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="pack1.Lab15_1" class="method navigator-link" hash-for-method="f(hema, welcome)">f(hema, welcome)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="pack1.Lab16" class="method navigator-link" hash-for-method="f(leena, admin123)">f(leena, admin123)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -131,7 +126,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">pack1.Lab15_1</span>
+              <span class="class-name">pack1.Lab16</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -144,18 +139,10 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="f(geeta, apple)">
-                  </a> <!-- f(geeta, apple) -->
+                  <a name="f(leena, admin123)">
+                  </a> <!-- f(leena, admin123) -->
                   <span class="method-name">f</span>
-                  <span class="parameters">(geeta,apple)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="f(hema, welcome)">
-                  </a> <!-- f(hema, welcome) -->
-                  <span class="method-name">f</span>
-                  <span class="parameters">(hema,welcome)</span>
+                  <span class="parameters">(leena,admin123)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -163,7 +150,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\user11\AppData\Local\Temp\testng-eclipse-323562167\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\user11\AppData\Local\Temp\testng-eclipse-531389964\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -172,7 +159,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;pack1.Lab15_1&quot;/&gt;
+      &lt;class name=&quot;pack1.Lab16&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -212,24 +199,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'f')
-data.setCell(0, 2, 'pack1.Lab15_1')
-data.setCell(0, 3, 5805);
+data.setCell(0, 2, 'pack1.Lab16')
+data.setCell(0, 3, 4630);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'f')
-data.setCell(1, 2, 'pack1.Lab15_1')
-data.setCell(1, 3, 4064);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'f')
-data.setCell(2, 2, 'pack1.Lab15_1')
-data.setCell(2, 3, 3359);
+data.setCell(1, 2, 'pack1.Lab16')
+data.setCell(1, 3, 4145);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -255,66 +238,54 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">pack1.Lab15_1</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">pack1.Lab16</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">beforeSuite</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">beforeTest</span>
-                <span class="method-start">26 ms</span>
+                <span class="method-start">24 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
-                <span class="method-start">49 ms</span>
+                <span class="method-start">46 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">80 ms</span>
+                <span class="method-start">82 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">f(Admin, admin123)</span>
-                <span class="method-start">10669 ms</span>
+                <span class="method-start">6739 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">16484 ms</span>
+                <span class="method-start">11375 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">16802 ms</span>
+                <span class="method-start">11716 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">f(geeta, apple)</span>
-                <span class="method-start">36488 ms</span>
+                <span class="method-name">f(leena, admin123)</span>
+                <span class="method-start">15882 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">39849 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">40148 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">f(hema, welcome)</span>
-                <span class="method-start">46379 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethod</span>
-                <span class="method-start">50445 ms</span>
+                <span class="method-start">20028 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">50748 ms</span>
+                <span class="method-start">20274 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">50752 ms</span>
+                <span class="method-start">20276 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">50778 ms</span>
+                <span class="method-start">20294 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
